  hasn't been used until now (due to it only being in Unreal3.3) we felt it was
  safe to break some numerics.
- Upgraded c-ares to 1.5.1, thanks to aegis for the partial patch (#0003671).
  This also fixed a curl compile/run issue, reported by static-x (#0003545).
- Added slow spamfilter detection. For each spamfilter, Unreal will check,
  each time it executes, how LONG it takes to execute. When a certain threshold
  is reached the IRCd will warn or even remove the spamfilter. This will prevent
  a spamfilter (regex) from slowing down the IRCd too much, though it's still not
  a guarantee that it will never go to a halt (eg: in case it takes several
  minutes to execute a regex or loops forever).
  Warning can be configured via set::spamfilter::slowdetect-warn (default:
  250 milliseconds) and automatic deletion of spamfilters if it takes too
  long is set through set::spamfilter::slowdetect-fatal (default: 500 ms).
  NOTE: slow spamfilter detection is currently not available on Windows.
  NOTE 2: to disable slow detection you can set the warn and fatal settings
  to 0 (zero). OR to really disable all code, remove SPAMFILTER_DETECTSLOW
  from include/config.h and recompile.
- Added another Mac OS X hack, such as one that should help against
  'error setting max fd's to 9223372036854775807' which prevents the ircd
  from booting up. Reported by btcentral and Bock. This hack might not be
  totally correct though ;).
- Limit watch status requests to one per time, more will often flood you off
  and is stupid/useless. Reported by ash11.
- The OS version output is now taken from uname() at runtime instead of
  'uname -a' at compile time. This fixes bug #1438 and #3320 reported by
  Mouse and Monk, where because of previous behavior the IRCd sometimes would
  not compile in certain environments.
- configure script is now generated by autoconf 2.61 (was: 2.59), hopefully
  that won't cause any issues, perhaps it even helps to fix some bugs...