@@ -1650,3 +1650,5 @@
   not compile in certain environments.
 - configure script is now generated by autoconf 2.61 (was: 2.59), hopefully
   that won't cause any issues, perhaps it even helps to fix some bugs...
+- #0001740 reported by Trocotronic, making the IRCd send ERROR : to all
+  links with possible reason for RESTART; like /die does it. [BACKPORT]
